# swirl

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  Dockerfile.customer  dummy_customer_api.py  main.py
db/: init-permissions.sql
docs/: CHALLENGE.md
frontend/: Dockerfile  README.md  index.html  package.json
frontend/src/: App.css
notebooks/: llm_pydantic_gen.ipynb  sample_registry.json  semantic_clustering.ipynb  structure_clustering.ipynb
rust/: lib.rs
src/dq_swirl/: __init__.py  rust_ingestion.pyi
src/dq_swirl/agents/: etl_builder_agent.py  orchestrator.py
src/dq_swirl/clients/: async_httpx_client_pool.py  async_llm_client.py  pg_duckdb_client.py
src/dq_swirl/ingestion/: grammar_parser.py  rust_ingestion.pyi  structure_analyzer.py
src/dq_swirl/ml/: semantic_clustering.py  structure_clustering.py
src/dq_swirl/ml_ai/: clustering.py  embedding_model.py  semantic_clustering.py
src/dq_swirl/persistence/: signature_registry.py
src/dq_swirl/prompts/: etl_builder_prompts.py  sql_gen_prompts.py
src/dq_swirl/tasks/: agent_tasks.py
src/dq_swirl/utils/: agent_utils.py  dataclass_utils.py  log_utils.py
tests/: conftest.py
tests/e2e/: test_dq_agent_orchestrator.py  test_etl_builder_agent.py
tests/integration/: test_async_llm_client.py  test_cluster_orchestrator.py  test_redis_signature_registry.py
tests/unit/: test_grammar_parser.py
worker/: Dockerfile  saq_worker.py
