[package]
name = "dq-swirl-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_ingestion"
path = "rust/lib.rs" 
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.0", features = ["extension-module"] }
pest = "2.8.5"
pest_derive = "2.8.5"
regex = "1.12"
rayon = "1.11"
serde_json = "1.0"