[project]
name = "dq-swirl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jae Ro", email = "jaero.gatech@gmail.com" }
]

requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1,<1.0.01",
    "langgraph>=1.0.7,<2.0.0",
    "litellm>=1.81.3,<2.0.0",
    "pydantic>=2.12.5,<3.0.0",
]

[dependency-groups]
dev = [
    "ruff"
]
test = [
    "pytest",
    "pytest-asyncio",
    "python-dotenv"
]

[project.optional-dependencies]
app = [
    "quart>=0.20.0,<1.0.0",
]

[project.scripts]
swirl = "dq_swirl:hello"

[tool.uv]
default-groups = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
    ".git",
    ".eggs",
    ".ipynb-checkpoints", 
    ".pytype", 
    ".pyenv",
    ".venv", 
    ".vscode", 
    "__pypackages__",
    "build", 
    "dist",
    "site-packages",
    ".ipynb",
    ".ruff_cache"
]

line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
ignore = ["F401"]
fixable = ["ALL"]

# allow for unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
